--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "private": true,
     "scripts": {
-        "dev:filament": "vite --config vite-filament.config.js",
+        "dev:filament": "TAILWIND_CONFIG=filament vite",
         "dev:frontend": "vite",
-        "build:filament": "vite build --config vite-filament.config.js",
+        "build:filament": "TAILWIND_CONFIG=filament vite build",
         "build:frontend": "vite build",
         "dev": "npm-run-all dev:*",
         "build": "npm-run-all build:*"
@@ -13,13 +13,13 @@
         "@tailwindcss/typography": "^0.5.3",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
-        "axios": "^0.25",
-        "laravel-vite-plugin": "^0.3.0",
+        "axios": "^0.27.2",
+        "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.19",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
         "tippy.js": "^6.3.7",
-        "vite": "^2.9.11"
+        "vite": "^3.0.2"
     }
 }
